// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="cf-cmkk1"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1jic877"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1bi15oj"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-1jic877"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-1bi15oj"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-1sgvpz7"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-1jic877"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons with spacing 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-lzztqz"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-j0ojwz"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-j0ojwz"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;
